fixed font (problem solved)

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: rgb(209, 99, 117);
-    font: 'Verdana', 'DejaVu Sans', 'sans-serif';
+    font-family: 'Verdana', 'DejaVu Sans', 'sans-serif';
 
 }
 #elementTwo {
