--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,28 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-items{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.right-items{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.links{
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .profile-image {
